fix: add transparent button styling and spacing after grid

--- a/src/components/utilities/button/button.scss
+++ b/src/components/utilities/button/button.scss
@@ -182,4 +182,14 @@ $variants: (
             }
         }
     }
+
+    &--transparent {
+        > span {
+            @apply bg-transparent;
+        }
+    }
+
+    section.grid + & {
+        @apply mt-12;
+    }
 }
